--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
       <h1>hi eunmin</h1>
       <hr />
       <app-servers></app-servers>
+      <app-warning-alert></app-warning-alert>
+      <app-success-alert></app-success-alert>
     </div>
   </div>
 </div>
