--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -13,5 +13,15 @@
 <!-- <p>{{ serverCreationStatus }}</p> -->
 <p *ngIf="serverCreated">Server was created, server name is {{ serverName }}</p>
 <!-- <ng-template #noServer><p>No server was created!</p></ng-template> -->
-<app-server></app-server>
-<app-server></app-server>
+<app-server *ngFor="let server of servers"></app-server>
+<hr />
+<button class="btn btn-primary" (click)="handleShow()">Display Details</button>
+<p *ngIf="show">secret password = 'shark'</p>
+<hr />
+<p
+  *ngFor="let log of logs; let i = index"
+  [ngStyle]="{ backgroundColor: i >= 5 ? 'blue' : 'transparent' }"
+  [ngClass]="{ 'white-text': i >= 5 }"
+>
+  {{ log }}
+</p>
